--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
-Flask
-Flask-RESTful
-Flask-JWT
-Flask-SQLAlchemy
-gunicorn
-psycopg2
+aniso8601==9.0.1
+appdirs==1.4.4
+black==21.5b0
+click==7.1.2
+Flask==1.1.2
+Flask-JWT==0.3.2
+Flask-RESTful==0.3.8
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.0
+gunicorn==20.1.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+mypy-extensions==0.4.3
+pathspec==0.8.1
+PyJWT==1.4.2
+pytz==2021.1
+regex==2021.4.4
+six==1.15.0
+SQLAlchemy==1.4.14
+toml==0.10.2
+Werkzeug==1.0.1
