--- a/nginx/flaskapp.conf
+++ b/nginx/flaskapp.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    server_name 15.188.48.69;
+    server_name __HOST;
 
     location / {
-        proxy_pass http://127.0.0.1:8000
+        proxy_pass http://127.0.0.1:8000;
     }
 }
