--- a/nginx/flaskapp.conf
+++ b/nginx/flaskapp.conf
@@ -1,4 +1,4 @@
-# strings startings with "__" will be replaced at runtime
+# strings starting with "__" will be replaced at runtime
 server {
     listen 80;
     server_name __HOST;
